--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/Bilusca/js-react-node#readme",
   "dependencies": {
+    "ejs": "^2.5.8",
     "express": "^4.16.3",
     "mongodb": "^3.0.5",
     "react": "^16.3.0",
@@ -38,6 +39,7 @@
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.7.0",
     "nodemon": "^1.17.3",
-    "webpack": "^4.4.1"
+    "webpack": "^4.4.1",
+    "webpack-cli": "^2.0.13"
   }
 }
