--- a/package.json
+++ b/package.json
@@ -23,9 +23,12 @@
   },
   "homepage": "https://github.com/Bilusca/js-react-node#readme",
   "dependencies": {
+    "axios": "^0.18.0",
     "ejs": "^2.5.8",
     "express": "^4.16.3",
+    "json-loader": "^0.5.7",
     "mongodb": "^3.0.5",
+    "node-sass-middleware": "^0.11.0",
     "react": "^16.3.0",
     "react-dom": "^16.3.0"
   },
